@@ -21,9 +21,7 @@
    Scenario: single row without header contains a number in decimal and binary form
        Given name[1] should be "decimal"
          And name[2] should be "binary"
-         And data[decimal] should be "3"
          And data[1][decimal] should be "3"
-         And data[binary] should be "11"
          And data[1][binary] should be "11"
          And the decimal data[decimal] should be data[binary] in binary for each data record
 
@@ -32,9 +30,7 @@
    Scenario: single row with header contains a number in decimal and binary form
        Given name[1] should be "decimal"
          And name[2] should be "binary"
-         And data[decimal] should be "3"
          And data[1][decimal] should be "3"
-         And data[binary] should be "11"
          And data[1][binary] should be "11"
          And the decimal data[decimal] should be data[binary] in binary for each data record
 
@@ -43,9 +39,7 @@
    Scenario: single column without header contains a number in decimal and binary form
        Given name[1] should be "decimal"
          And name[2] should be "binary"
-         And data[decimal] should be "3"
          And data[1][decimal] should be "3"
-         And data[binary] should be "11"
          And data[1][binary] should be "11"
          And the decimal data[decimal] should be data[binary] in binary for each data record
 
@@ -54,9 +48,7 @@
    Scenario: single column with header contains a number in decimal and binary form
        Given name[1] should be "decimal"
          And name[2] should be "binary"
-         And data[decimal] should be "3"
          And data[1][decimal] should be "3"
-         And data[binary] should be "11"
          And data[1][binary] should be "11"
          And the decimal data[decimal] should be data[binary] in binary for each data record
 
@@ -65,11 +57,9 @@
   Scenario: each row contains a number in decimal and binary form
       Given name[1] should be "decimal"
         And name[2] should be "binary"
-        And data[decimal] should be "1"
         And data[1][decimal] should be "1"
         And data[2][decimal] should be "2"
         And data[3][decimal] should be "3"
-        And data[binary] should be "1"
         And data[1][binary] should be "1"
         And data[2][binary] should be "10"
         And data[3][binary] should be "11"
@@ -80,11 +70,9 @@
   Scenario: each column contains a number in decimal and binary form
       Given name[1] should be "decimal"
         And name[2] should be "binary"
-        And data[decimal] should be "4"
         And data[1][decimal] should be "4"
         And data[2][decimal] should be "5"
         And data[3][decimal] should be "6"
-        And data[binary] should be "100"
         And data[1][binary] should be "100"
         And data[2][binary] should be "101"
         And data[3][binary] should be "110"
@@ -104,15 +92,12 @@
       Given name[1] should be "number"
         And name[2] should be "square"
         And name[3] should be "cube"
-        And data[number] should be "1"
         And data[1][number] should be "1"
         And data[2][number] should be "2"
         And data[3][number] should be "3"
-        And data[square] should be "1"
         And data[1][square] should be "1"
         And data[2][square] should be "4"
         And data[3][square] should be "9"
-        And data[cube] should be "1"
         And data[1][cube] should be "1"
         And data[2][cube] should be "8"
         And data[3][cube] should be "27"
@@ -125,15 +110,12 @@
       Given name[1] should be "number"
         And name[2] should be "square"
         And name[3] should be "cube"
-        And data[number] should be "1"
         And data[1][number] should be "1"
         And data[2][number] should be "2"
         And data[3][number] should be "3"
-        And data[square] should be "1"
         And data[1][square] should be "1"
         And data[2][square] should be "4"
         And data[3][square] should be "9"
-        And data[cube] should be "1"
         And data[1][cube] should be "1"
         And data[2][cube] should be "8"
         And data[3][cube] should be "27"
@@ -190,9 +172,6 @@
        Then name[1] should be "a"
         And name[2] should be "b"
         And name[3] should be "c"
-        And data[a] should be "0"
-        And data[b] should be "1"
-        And data[c] should be "1"
         And data[1][a] should be "0"
         And data[1][b] should be "1"
         And data[1][c] should be "1"
