@@ -5,6 +5,7 @@ Jul 10, 2017
 - Report error if Data Table tag is specified without StepDef tag
 - Give steps that call other steps execution priority over all other steps or StepDefs that may have the same
   structure to ensure that they are evaluated and not raised as conflicts that require renaming.
+- All data table cell references must be include data record index unless in foreach step
 
 2.7.1
 =====
